fix: Remove jumping work item card in Blink browsers

--- a/src/components/workitems/workItemCard.scss
+++ b/src/components/workitems/workItemCard.scss
@@ -7,8 +7,6 @@
     min-height: 50px;
     margin-bottom: 15px;
 
-    flex: 1 1 auto;
-
     .bolt-card {
         transition: 0.3s linear all;
     }
